--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <title>導遊申請表</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>導遊申請表</h1>
-    <form>
+    <button id="lineLoginButton">使用 Line 登入</button>
+
+    <form id="userForm">
         <label for="name">姓名:</label>
         <input type="text" id="name" required>
 
@@ -23,6 +26,8 @@
 
         <input type="submit" value="提交">
     </form>
+
+    <div id="userData"></div>
 
     <script src="script.js"></script>
 </body>
