--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <label for="email">信箱:</label>
         <input type="email" id="email" required>
 
+         <!-- 用於儲存姓名和使用者 ID 的隱藏欄位 -->
+        <input type="hidden" id="hiddenName">
+        <input type="hidden" id="hiddenUserId">
+
         <input type="submit" value="提交">
     </form>
 
