--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="email" id="email" required>
 
          <!-- 用於儲存姓名和使用者 ID 的隱藏欄位 -->
-        <input type="hidden" id="hiddenName">
+         <input type="text" id="hiddenName" readonly>
         <input type="hidden" id="hiddenUserId">
 
         <input type="submit" value="提交">
