--- a/index.html
+++ b/index.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <title>Line 登入示例</title>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <title>導遊申請表</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>導遊申請表</h1>
+    <h1>Line 登入示例</h1>
     <button id="lineLoginButton">使用 Line 登入</button>
-
-    <form id="userForm">
-        <label for="name">姓名:</label>
-        <input type="text" id="name" required>
-
-        <label for="company">公司:</label>
-        <input type="text" id="company" required>
-
-        <label for="birthday">生日:</label>
-        <input type="date" id="birthday" required>
-
-        <label for="email">信箱:</label>
-        <input type="email" id="email" required>
-
-         <!-- 用於儲存姓名和使用者 ID 的隱藏欄位 -->
-         <input type="hidden" id="hiddenName">
-        <input type="hidden" id="hiddenUserId">
-
-        <input type="submit" value="提交">
-    </form>
 
     <div id="userData"></div>
 
-    <script src="script.js"></script>
+    <script>
+        // 初始化 Line Login SDK
+        function initializeLineLogin() {
+            liff.init({ liffId: '1661222932-v3wdnbPr' })
+                .then(() => {
+                    document.getElementById('lineLoginButton').addEventListener('click', lineLogin);
+                })
+                .catch((error) => {
+                    console.error('初始化 Line Login 失敗', error);
+                });
+        }
+
+        // Line 登入處理函式
+        function lineLogin() {
+            liff.login()
+                .then(() => {
+                    if (liff.isLoggedIn()) {
+                        liff.getProfile()
+                            .then((profile) => {
+                                // 獲取用戶姓名和使用者 ID
+                                var name = profile.displayName;
+                                var userId = profile.userId;
+
+                                // 顯示用戶姓名和使用者 ID
+                                document.getElementById('userData').innerText = '用戶姓名: ' + name + '\n使用者 ID: ' + userId;
+                            })
+                            .catch((error) => {
+                                console.error('獲取 Line 用戶資訊失敗', error);
+                            });
+                    }
+                })
+                .catch((error) => {
+                    console.error('Line 登入失敗', error);
+                });
+        }
+
+        // 呼叫初始化函式
+        initializeLineLogin();
+    </script>
 </body>
 </html>
