--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                                 userDataElement.innerHTML = '用戶姓名: ' + name + '<br>使用者 ID: ' + userId;
 
                                 // 隱藏登入按鈕
-                                var loginButton = document.getElementById('lineLoginButton');
-                                loginButton.style.display = 'none';
+                                document.getElementById('lineLoginButton').style.display = 'none';
                             })
                             .catch((error) => {
                                 console.error('獲取 Line 用戶資訊失敗', error);
