--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     });
 }
 
-
+        document.getElementById('lineLoginButton').style.display = 'none';
         // 呼叫初始化函式
         initializeLineLogin();
     </script>
