--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Line 登入前</title>
+    <title>Tourist Guide Application</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Line 登入前</h1>
-  <a href="/line-login">使用 Line 登入</a>
+    <h1>Tourist Guide Application</h1>
+    <p id="userId"></p>
+
+    <script src="script.js"></script>
 </body>
 </html>
