--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tourist Guide Application</title>
+    <title>Line User Info</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tourist Guide Application</h1>
-    <p id="userId"></p>
+    <h1>Line User Info</h1>
+    <div id="userInfo"></div>
 
     <script src="script.js"></script>
 </body>
