--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <label for="name">姓名:</label>
         <input type="text" id="name" required>
 
+        <label for="name">電話號碼:</label>
+        <input type="text" id="phone" required>
+
+        <label for="name">推薦人:</label>
+        <input type="text" id="recommender" required>
+
         <label for="company">公司:</label>
         <input type="text" id="company" required>
 
